--- a/accompany-consullting/src/app/entretient/entretientdetail/entretientdetail.component.html
+++ b/accompany-consullting/src/app/entretient/entretientdetail/entretientdetail.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <mat-card>
     <mat-card-content>
         <div class="container">
@@ -10,6 +11,10 @@
                         <h4 class="card-title text-white m-0 text-center"> Description du poste </h4>
                     </div>
                     <fieldset>
+                        
+
+<!-- Assurez-vous d'avoir importé 'DomSanitizer' depuis '@angular/platform-browser' dans votre composant -->
+
                         <div class="fieldset-content">
 
                             <div class="col-md-4">
@@ -28,24 +33,214 @@
 
                     <!--candidat detail -->
                     <div class="p-20 bg-info ">
-                        <h4 class="card-title text-white m-0 text-center"> Candidat detail </h4>
+                        <h4 class="card-title text-white m-0 text-center"> Candidat détails </h4>
                     </div>
 
 
                     <fieldset>
-                        <div class="fieldset-content">
+                        <script src="https://cdn02.jotfor.ms/static/prototype.forms.js?3.3.44072" type="text/javascript"></script>
+<script src="https://cdn03.jotfor.ms/static/jotform.forms.js?3.3.44072" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/js/vendor/jquery-1.8.0.min.js?v=3.3.44072" type="text/javascript"></script>
+<script defer src="https://cdn02.jotfor.ms/js/vendor/maskedinput.min.js?v=3.3.44072" type="text/javascript"></script>
+<script defer src="https://cdn03.jotfor.ms/js/vendor/jquery.maskedinput.min.js?v=3.3.44072" type="text/javascript"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/punycode/1.4.1/punycode.js"></script>
+<script src="https://cdn01.jotfor.ms/js/payments/validategateways.js?v=3.3.44072" type="text/javascript"></script>
+<script src="https://cdn01.jotfor.ms/s/umd/769050d7e95/for-form-branding-footer.js?v=3.3.44072" type="text/javascript" defer></script>
+<script type="text/javascript">	JotForm.newDefaultTheme = true;
+	JotForm.extendsNewTheme = false;
+	JotForm.singleProduct = false;
+	JotForm.newPaymentUIForNewCreatedForms = false;
+	JotForm.newPaymentUI = true;
 
-                            <div class="col-md-4">
-                                <p> <span
-                                        style="color: mediumslateblue; font-size: large; font-family: Georgia, 'Times New Roman', Times, serif;">Nom
-                                        :</span>{{candidatprofil.nom}}</p>
-                                <h4><span
-                                        style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Prenom
-                                        : </span>{{candidatprofil.prenom}}</h4>
+   JotForm.setConditions([{"action":{"field":"26","visibility":"Show"},"link":"Any","terms":[{"field":"30","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"49","visibility":"Show"},"link":"Any","terms":[{"field":"30","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"48","visibility":"Show"},"link":"Any","terms":[{"field":"30","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"37","visibility":"Show"},"link":"Any","terms":[{"field":"30","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"36","visibility":"Show"},"link":"Any","terms":[{"field":"30","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"27","visibility":"Show"},"link":"Any","terms":[{"field":"31","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"51","visibility":"Show"},"link":"Any","terms":[{"field":"31","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"50","visibility":"Show"},"link":"Any","terms":[{"field":"31","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"39","visibility":"Show"},"link":"Any","terms":[{"field":"31","operator":"equals","value":"Yes"}],"type":"field"},{"action":{"field":"38","visibility":"Show"},"link":"Any","terms":[{"field":"31","operator":"equals","value":"Yes"}],"type":"field"}]);	JotForm.submitError="jumpToFirstError";
+	window.addEventListener('DOMContentLoaded',function(){window.brandingFooter.init({"formID":232166395339564,"campaign":"powered_by_jotform_le","isCardForm":false,"isSmartPDFForm":false})});
+	JotForm.init(function(){
+	/*INIT-START*/
+      JotForm.setPhoneMaskingValidator( 'input_19_full', '\u0028\u0023\u0023\u0023\u0029 \u0023\u0023\u0023\u002d\u0023\u0023\u0023\u0023' );
+      JotForm.setPhoneMaskingValidator( 'input_57_full', '\u0028\u0023\u0023\u0023\u0029 \u0023\u0023\u0023\u002d\u0023\u0023\u0023\u0023' );
+      setTimeout(function() {
+          $('input_23').hint('ex: myname@example.com');
+       }, 20);
+	/*INIT-END*/
+	});
+
+   setTimeout(function() {
+JotForm.paymentExtrasOnTheFly([null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,{"description":"","name":"phoneNumber19","qid":"19","text":"Telephone Number 1","type":"control_phone"},{"description":"","name":"fullName20","qid":"20","text":"Candidat","type":"control_fullname"},null,null,{"description":"","name":"email23","qid":"23","subLabel":"","text":"E-mail","type":"control_email"},null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,{"name":"divider","qid":"51","text":"Divider","type":"control_divider"},null,null,null,null,{"description":"","name":"competences","qid":"56","subLabel":"","text":"Competences","type":"control_email"},{"description":"","name":"telephoneNumber","qid":"57","text":"Telephone Number 2","type":"control_phone"}]);}, 20); 
+</script>
+<style type="text/css">@media print{.form-section{display:inline!important}.form-pagebreak{display:none!important}.form-section-closed{height:auto!important}.page-section{position:initial!important}}</style>
+<link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?v=3.3.44072&themeRevisionID=63e6805f64383509e31513f4"/>
+<link type="text/css" rel="stylesheet" href="https://cdn02.jotfor.ms/css/styles/payment/payment_styles.css?3.3.44072" />
+<link type="text/css" rel="stylesheet" href="https://cdn03.jotfor.ms/css/styles/payment/payment_feature.css?3.3.44072" />
+<link type="text/css" rel="stylesheet" href="https://cdn01.jotfor.ms/stylebuilder/donationBox.css?v=3.3.44072">
+<style type="text/css" id="form-designer-style">
+    /* Injected CSS Code */
+/*PREFERENCES STYLE*/
+    .form-all {
+      font-family: Inter, sans-serif;
+    }
+  
+    .form-label.form-label-auto {
+      
+    display: block;
+    float: none;
+    text-align: left;
+    width: 100%;
+  
+    }
+  
+    .form-line {
+      margin-top: 12px;
+      margin-bottom: 12px;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  
+    .form-all {
+      max-width: 10000px;
+      width: 100%;
+    }
+  
+    .form-label.form-label-left,
+    .form-label.form-label-right,
+    .form-label.form-label-left.form-label-auto,
+    .form-label.form-label-right.form-label-auto {
+      width: 230px;
+    }
+  
+    .form-all {
+      font-size: 16px
+    }
+  
+    .supernova .form-all, .form-all {
+      background-color: #fff;
+    }
+  
+    .form-all {
+      color: #2C3345;
+    }
+    .form-header-group .form-header {
+      color: #2C3345;
+    }
+    .form-header-group .form-subHeader {
+      color: #2C3345;
+    }
+    .form-label-top,
+    .form-label-left,
+    .form-label-right,
+    .form-html,
+    .form-checkbox-item label,
+    .form-radio-item label,
+    span.FITB .qb-checkbox-label,
+    span.FITB .qb-radiobox-label,
+    span.FITB .form-radio label,
+    span.FITB .form-checkbox label,
+    [data-blotid][data-type=checkbox] [data-labelid],
+    [data-blotid][data-type=radiobox] [data-labelid],
+    span.FITB-inptCont[data-type=checkbox] label,
+    span.FITB-inptCont[data-type=radiobox] label {
+      color: #2C3345;
+    }
+    .form-sub-label {
+      color: #464d5f;
+    }
+  
+  .supernova {
+    background-color: #ecedf3;
+  }
+  .supernova body {
+    background: transparent;
+  }
+  
+    .form-textbox,
+    .form-textarea,
+    .form-dropdown,
+    .form-radio-other-input,
+    .form-checkbox-other-input,
+    .form-captcha input,
+    .form-spinner input {
+      background-color: #fff;
+    }
+  
+    .supernova {
+      background-image: none;
+    }
+    #stage {
+      background-image: none;
+    };
+  
+    .form-all {
+      background-image: none;
+    }
+  .form-all:before { content: none; } .form-all { margin-top: 72px; }/*PREFERENCES STYLE*//*__INSPECT_SEPERATOR__*/
+    /* Injected CSS Code */
+</style>
+
+<form class="jotform-form" action="https://submit.jotform.com/submit/232166395339564" method="post" name="form_232166395339564" id="232166395339564" accept-charset="utf-8" autocomplete="on"><input type="hidden" name="formID" value="232166395339564" /><input type="hidden" id="JWTContainer" value="" /><input type="hidden" id="cardinalOrderNumber" value="" />
+  <div role="main" class="form-all">
+    <ul class="form-section page-section">
+      <li class="form-line" data-type="control_fullname" id="id_20"><label class="form-label form-label-left" id="label_20" for="first_20"> Candidat </label>
+        <div id="cid_20" class="form-input" data-layout="full">
+          <div data-wrapper-react="true"><span class="form-sub-label-container" style="vertical-align:top" data-input-type="first"><input 
+            value="{{candidatprofil.nom}}"  disabled style="cursor: not-allowed;" type="text" id="first_20" name="q20_fullName20[first]" class="form-textbox" data-defaultvalue="" autoComplete="section-input_20 given-name" size="10" value="" data-component="first" aria-labelledby="label_20 sublabel_20_first" /><label class="form-sub-label" for="first_20" id="sublabel_20_first" style="min-height:13px" aria-hidden="false">Nom</label></span>
+            
+            <span class="form-sub-label-container" style="vertical-align:top" data-input-type="last"><input value="{{candidatprofil.prenom}}"  disabled style="cursor: not-allowed;"type="text" id="last_20" name="q20_fullName20[last]" class="form-textbox" data-defaultvalue="" autoComplete="section-input_20 family-name" size="15" value="" data-component="last" aria-labelledby="label_20 sublabel_20_last" /><label class="form-sub-label" for="last_20" id="sublabel_20_last" style="min-height:13px" aria-hidden="false">Prénom</label></span></div>
+        </div>
+      </li>
+      <li class="form-line" data-type="control_phone" id="id_19"><label class="form-label form-label-left" id="label_19" for="input_19_full"> Télephone Number 1 </label>
+        <div id="cid_19" class="form-input" data-layout="half"> <span class="form-sub-label-container" style="vertical-align:top"><input  value="{{candidatprofil.tel1}}"  disabled style="cursor: not-allowed;"type="tel" id="input_19_full" name="q19_phoneNumber19[full]" data-type="mask-number" class="mask-phone-number form-textbox validate[Fill Mask]" data-defaultvalue="" autoComplete="section-input_19 tel-national" style="width:310px" data-masked="true" value="" placeholder="(000) 000-0000" data-component="phone" aria-labelledby="label_19" /></span> </div>
+      </li>
+      <li class="form-line" data-type="control_phone" id="id_57"><label class="form-label form-label-left" id="label_57" for="input_57_full"> Télephone Number 2 </label>
+        <div id="cid_57" class="form-input" data-layout="half"> <span class="form-sub-label-container" style="vertical-align:top"><input type="tel" value="{{candidatprofil.tel2}}"  disabled style="cursor: not-allowed;" id="input_57_full" name="q57_telephoneNumber[full]" data-type="mask-number" class="mask-phone-number form-textbox validate[Fill Mask]" data-defaultvalue="" autoComplete="section-input_57 tel-national" style="width:310px" data-masked="true" value="" placeholder="(000) 000-0000" data-component="phone" aria-labelledby="label_57" /></span> </div>
+      </li>
+      <li class="form-line" data-type="control_email" id="id_23"><label class="form-label form-label-left" id="label_23" for="input_23"> E-mail </label>
+        <div id="cid_23" class="form-input" data-layout="half"> <input type="email" value="{{candidatprofil.email}}"  disabled style="cursor: not-allowed;" id="input_23" name="q23_email23" class="form-textbox validate[Email]" data-defaultvalue="" style="width:310px" size="310" value="" placeholder="ex: myname@example.com" data-component="email" aria-labelledby="label_23" /> </div>
+      </li>
+      <li class="form-line" data-type="control_email" id="id_56"><label class="form-label form-label-left" id="label_56" for="input_56"> Compétences </label>
+        <div id="cid_56" class="form-input" data-layout="half"> <input type="text"  value="{{candidatprofil.competance}}"  disabled style="cursor: not-allowed;"id="input_56" name="q56_competences" class="form-textbox validate[Email]" data-defaultvalue="" style="width:310px" size="310" value="" data-component="email" aria-labelledby="label_56" /> </div>
+      </li>
 
 
-                            </div>
-                        </div>
+ <div id="cid_51" class="form-input-wide" data-layout="full">
+    <button mat-raised-button class="btn btn-primary btn-sm" (click)="togglePdfViewer()" style="background-color: #4974e0; color: #ecedf3;">
+    Consulter CV     </button>
+    
+    
+   </div>      
+
+
+      <li class="form-line" data-type="control_divider" id="id_51">
+        <div id="cid_51" class="form-input-wide" data-layout="full">
+          <div class="divider" data-component="divider" style="border-bottom-width:1px;border-bottom-style:solid;border-color:#F3F3FE;height:1px;margin-left:0px;margin-right:0px;margin-top:5px;margin-bottom:5px"></div>
+        </div>
+      </li>
+      <li style="display:none">Should be Empty: <input type="text" name="website" value="" /></li>
+    </ul>
+
+   
+  </div>
+  <script>
+    JotForm.showJotFormPowered = "new_footer";
+  </script>
+  <script>
+    JotForm.poweredByText = "Powered by Jotform";
+  </script><input type="hidden" class="simple_spc" id="simple_spc" name="simple_spc" value="232166395339564" />
+  <script type="text/javascript">
+    var all_spc = document.querySelectorAll("form[id='232166395339564'] .si" + "mple" + "_spc");
+    for (var i = 0; i < all_spc.length; i++)
+    {
+      all_spc[i].value = "232166395339564-232166395339564";
+    }
+  </script>
+</form><script type="text/javascript">JotForm.ownerView=true;</script><script src="https://cdn.jotfor.ms//js/vendor/smoothscroll.min.js?v=3.3.44072"></script>
+<script src="https://cdn.jotfor.ms//js/errorNavigation.js?v=3.3.44072"></script>
+<script type="text/javascript">JotForm.isNewSACL=true;</script>
+
+
+
+
+<div *ngIf="showPdf">
+  <iframe [src]="pdfUrl" width="100%" height="500px"></iframe>
+</div>
                     </fieldset>
 
                     <div class="p-20 bg-info ">
@@ -74,3 +269,5 @@
             </div>
         </div>
     </mat-card-content></mat-card>
+
+  
