--- a/accompany-consullting/src/app/evaluation/eval-competance/eval-competance.component.css
+++ b/accompany-consullting/src/app/evaluation/eval-competance/eval-competance.component.css
@@ -31,3 +31,130 @@
     margin-left: auto;
   }
   
+  input[type=text], select {
+    width: 75%;
+    padding: 6px 6px;
+    margin: 10px 2 px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-sizing: border-box;
+  }
+  input[type=date], select {
+    width: 25%;
+    padding: 6px 6px;
+    margin: 10px 5px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  label{
+    text-indent: 25 px;
+    font-size: medium;
+    font-family: Georgia, serif;
+    color: #24527a;
+  }
+  input[type='radio']{
+    width: 25px;
+    height: 25px;
+    border-radius: 10px;
+    padding: 20px 20px;
+    margin: 20px 20px;
+
+}
+.left-align {
+  position: left;
+}
+
+
+.custom-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #0a0416;
+}
+
+.custom-toolbar {
+  background-color: #a0bad1;
+  color: aliceblue;
+  padding: 8px 16px;
+}
+
+.left-align {
+  text-align: left;
+}
+
+.input-icon {
+  position: relative;
+}
+
+.input-icon input {
+  padding-left: 30px;
+  width: 100%;
+}
+
+.input-icon input {
+  width: 500%;
+  padding: 6px 6px;
+  margin: 20px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+.input-icon textarea {
+  width: 500%;
+  padding: 6px 6px;
+  margin: 20px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+.input-icon select {
+  width: 500%;
+  padding: 6px 6px;
+  margin: 20px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-size-adjust: auto;
+  font-family: Georgia, serif;
+}
+.label-cell {
+  vertical-align: middle;
+  padding-right: 1rem; /* Ajoutez un espacement si nécessaire */
+}
+
+.input-icon2 select  {
+  width: 500%;
+  padding: 6px 6px;
+  margin: 20px 10px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  text-size-adjust: auto;
+  font-family: Georgia, serif;
+}
+.custom-button-container {
+  margin-bottom: 20px;
+}
+
+.custom-button {
+  background-color: #1347a4;
+  color: aliceblue;
+  margin-right: 10px;
+}
+
+.custom-cancel-button {
+  background-color: #f95959;
+  color: azure;
+}
+
+
