--- a/accompany-consullting/src/app/Mission/missions-manager/missions-manager.component.html
+++ b/accompany-consullting/src/app/Mission/missions-manager/missions-manager.component.html
@@ -71,7 +71,7 @@
       <th mat-header-cell *matHeaderCellDef class="my-column">Actions</th>
       <td mat-cell *matCellDef="let mission" class="my-column">
         <!-- Ajoutez ici les actions que vous souhaitez afficher pour chaque mission -->
-        <button mat-raised-button class="btn btn-success btn-sm mr-2" (click)="evalmonth(mission.id)">
+        <button mat-raised-button class="btn btn-success btn-sm mr-2" (click)="evalmonth(mission.id,'frommanager')">
           <i class="fa fa-check-circle"></i> Passe
         </button>
       </td>
