--- a/accompany-consullting/src/app/anniversaire/anniversaire.component.html
+++ b/accompany-consullting/src/app/anniversaire/anniversaire.component.html
@@ -1,1 +1,43 @@
-<p>anniversaire works!</p>
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="p-20 bg-info position-relative">
+  <h4 class="card-title text-white m-0">Anniversaire 🎁  </h4>
+
+     
+
+</div>
+
+<div>
+  <table class="table mat-elevation-z8" style="width: 100%;" mat-table [dataSource]="birthdayConsultants">
+
+    <ng-container matColumnDef="nom prenom">
+      <th mat-header-cell *matHeaderCellDef class="thead-info"> Nom &Prenom </th>
+      <td mat-cell *matCellDef="let consultant">{{ consultant.nom }} {{ consultant.prenom }}</td>
+    </ng-container>
+    <ng-container matColumnDef="date_naissance">
+      <th mat-header-cell *matHeaderCellDef class="thead-info"> Date d'anniversaire</th>
+      <td mat-cell *matCellDef="let consultant"> {{ consultant.date_naissance | date:'dd-MM-yyyy' }} </td>
+    </ng-container>
+    <ng-container matColumnDef="date_integration">
+      <th mat-header-cell *matHeaderCellDef class="thead-info"> Date d'integration </th>
+      <td mat-cell *matCellDef="let consultant"> {{ consultant.date_integration | date:'dd-MM-yyyy' }} </td>
+    </ng-container>
+    <ng-container matColumnDef="grade">
+      <th mat-header-cell *matHeaderCellDef class="thead-info"> Grade</th>
+      <td mat-cell *matCellDef="let consultant"> {{ consultant.grade }} </td>
+    </ng-container>
+    <ng-container matColumnDef="anniversaire">
+      <th mat-header-cell *matHeaderCellDef class="thead-info"> Anniversaire</th>
+      <td mat-cell *matCellDef="let consultant"> 
+        <span *ngIf="consultant.isBirthday && consultant.isPro">Anniversaire pro et personnel</span>
+        <span *ngIf="consultant.isBirthday && !consultant.isPro">Anniversaire personnel</span>
+        <span *ngIf="!consultant.isBirthday && consultant.isPro">Pro</span>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="[ 'nom prenom', 'date_naissance', 'date_integration', 'grade','anniversaire']"></tr>
+    <tr mat-row *matRowDef="let consultant; columns: [ 'nom prenom', 'date_naissance', 'date_integration', 'grade','anniversaire'];"></tr>
+  </table>
+</div>
