--- a/accompany-consullting/src/app/consultant/consultantdetail/consultantdetail.component.html
+++ b/accompany-consullting/src/app/consultant/consultantdetail/consultantdetail.component.html
@@ -1,9 +1,20 @@
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
 <div class="scrollable-content"><div class="container">
     <div class="row">
       <div class="col-md-3">
         <div class="card">
           <div class="card-body text-center">
-            <img src="assets\images\users\login.png" alt="Photo de profil" class="img-fluid rounded-circle mb-3">
+
+
+            <ng-container *ngIf="consultant.genre === 'Masculin'; else femaleImage">
+              <img class="mg-fluid rounded-circle mb-3" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+            </ng-container>
+            <ng-template #femaleImage>
+              <img class="img-fluid rounded-circle mb-3" width="150px" src="https://img.icons8.com/?size=512&id=912rt74nJqQV&format=png">
+            </ng-template>
             <h4 class="card-title">{{consultant.nom}}&{{consultant.prenom}}</h4>
            
           </div>
@@ -48,55 +59,45 @@
                 <p><strong>Date d'integration :</strong>{{consultant.date_integration| date:'dd-MM-yyyy'}}</p> 
 
               </div>
-            <h4 class="card-title">Entretien</h4>
+            <h4 class="card-title">Entretiens</h4>
             <hr>
            
 
 
-            <table class="interview-table">
+          
+              
+
+
+
+
+
+
+              <table class="table">
                 <thead>
                   <tr>
-                    <th>Date</th>
-                    <th>Type</th>
-                    <th>Consultant</th>
-                    <th>Manager</th>
-                    
+                    <th>Recruteur</th>
+                    <th>Avis</th>
+                    <th>Statut</th>
+                    <th>Recruteur Suivant</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>01/01/2022</td>
-                    <td>Annuel</td>
-                    <td>John Doe</td>
-                    <td>Jane Smith</td>
+                  <tr *ngFor="let entretien of entretients">
+                    <td>{{ recruteur.nom }} {{ recruteur.prenom }}</td>
+                    <td>{{ entretien.avis }}</td>
                     <td>
-                   
+                      <span [ngClass]="{
+                        'badge badge-success': entretien.statut === 'Succès',
+                        'badge badge-warning': entretien.statut === 'En attente',
+                        'badge badge-danger': entretien.statut === 'Échec'
+                      }">{{ entretien.statut }}</span>
                     </td>
-                  </tr>
-                  <tr>
-                    <td>05/05/2022</td>
-                    <td>Projet</td>
-                    <td>Mark Johnson</td>
-                    <td>Emily Davis</td>
-                    
-                  </tr>
-                  <tr>
-                    <td>10/10/2022</td>
-                    <td>Compétences</td>
-                    <td>Sara Wilson</td>
-                    <td>Mike Brown</td>
-              
+                    <td>{{ recruteursuivant.nom }} {{ recruteursuivant.prenom }}</td>
                   </tr>
                 </tbody>
               </table>
               
-
-
-
-
-
-
-
+              
 
 
 
