--- a/accompany-consullting/src/app/home/home.component.html
+++ b/accompany-consullting/src/app/home/home.component.html
@@ -1,22 +1,62 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
 
-<mat-card class="oh text-center little-profile small" >
-    <img mat-card-image src="assets/images/background/z.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-      <div class="pro-img">
-          <img src="assets/images/users/login.png" width="100" alt="user" class="img-circle">
-      </div>
-     
-     
-      <div fxLayout="row" fxLayoutWrap="wrap" class="m-t-30">
-          <div fxFlex.gt-sm="33.33%" fxFlex.gt-xs="33.33%" fxFlex="100">
-              <h3 class="m-0 font-light">Nom : {{username}}</h3>
-          </div>
-          <div fxFlex.gt-sm="33.33%" fxFlex.gt-xs="33.33%" fxFlex="100">
-              <h3 class="m-0 font-light">Prenom : {{email}}</h3>
-          </div>
-          <div fxFlex.gt-sm="33.33%" fxFlex.gt-xs="33.33%" fxFlex="100">
-              <h3 class="m-0 font-light">Adress</h3>
-          </div>
-      </div>
-  </mat-card-content>
-</mat-card>
+
+<div class="container rounded bg-white mt-5 mb-5">
+    <div class="row">
+        <div class="col-md-3 border-right">
+            <div class="d-flex flex-column align-items-center text-center p-3 py-5">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h4 class="text-right">Profile </h4>
+                    
+                </div>
+                <ng-container *ngIf="user.genre === 'Masculin'; else femaleImage">
+                  <img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                </ng-container>
+                <ng-template #femaleImage>
+                  <img class="rounded-circle mt-5" width="150px" src="https://img.icons8.com/?size=512&id=912rt74nJqQV&format=png">
+                </ng-template>
+                             
+                <span class="font-weight-bold">{{username}}</span><span class="text-black-50">{{email}}</span><span> </span></div>
+        </div>
+        <div class="col-md-5 border-right">
+            <div class="p-3 py-5">
+            
+                <div class="d-flex justify-content-between align-items-center experience"><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Données personnelles</span></div><br>
+
+                <div class="row mt-2">
+                    <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value="{{user.nom}}"></div>
+                    <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="{{user.prenom}}"></div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value="{{user.tel1}}"></div>
+                    <div class="col-md-12"><label class="labels">Mobile Number 2</label><input type="text" class="form-control" placeholder="enter phone number" value="{{user.tel2}}"></div>
+
+                    <div class="col-md-12"><label class="labels">Address </label><input type="text" class="form-control" placeholder="enter address line 1" value="{{user.adress}}"></div>
+      
+                    <div class="col-md-12"><label class="labels">Cin</label><input type="text" class="form-control" placeholder="enter address line 2" value="{{user.cin}}"></div>
+                    <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="enter email id" value="{{user.mail}}"></div>
+                    <div class="col-md-12"><label class="labels">Date de naissance</label><input type="text" class="form-control" placeholder="education" value="{{user.date_naissance| date:'dd-MM-yyyy'}}"></div>
+                </div>
+                <div class="row mt-3">
+
+                </div>
+                <div class="mt-5 text-center"></div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="p-3 py-5">
+                <div class="d-flex justify-content-between align-items-center experience"><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Données Contractulles</span></div><br>
+                <div class="col-md-12"><label class="labels">Type de contart</label><input type="text" class="form-control" placeholder="experience" value="{{user.contrat}}"></div> <br>
+                <div class="col-md-12"><label class="labels">Salaire</label><input type="text" class="form-control" placeholder="additional details" value="{{user.salaire}}"></div>
+                <div class="col-md-12"><label class="labels">societe</label><input type="text" class="form-control" placeholder="additional details" value="{{user.business_unit}}"></div>
+
+                <div class="col-md-12"><label class="labels">Grade</label><input type="text" class="form-control" placeholder="additional details" value="{{user.grade}}"></div>
+              
+                <div class="col-md-12"><label class="labels">Fonction</label><input type="text" class="form-control" placeholder="additional details" value="{{user.fonction}}"></div>
+                <div class="col-md-12"><label class="labels">Postcode</label><input type="text" class="form-control" placeholder="enter address line 2" value="{{user.code}}"></div>
+                <div class="col-md-12"><label class="labels">Date-integration</label><input type="text" class="form-control" placeholder="enter address line 2" value="{{user.date_integration| date:'dd-MM-yyyy'}}"></div>
+
+            </div>
+        </div>
+    </div>
+</div>
